--- a/app/src/main/res/layout/activity_foto_dupla_dois.xml
+++ b/app/src/main/res/layout/activity_foto_dupla_dois.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/btn_Voltar"
+            android:id="@+id/btnVoltar"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:background="@drawable/left_arrow"/>
