--- a/app/src/main/res/layout/activity_confirmar_dupla.xml
+++ b/app/src/main/res/layout/activity_confirmar_dupla.xml
@@ -47,7 +47,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/appCompatTextView5"
+        style="@style/subTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:text="A pessoa com a pulseira está\nem uma das fotos?"
+        app:layout_constraintStart_toStartOf="@+id/appCompatTextView3"
+        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
+        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView3"/>
+
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -55,6 +67,39 @@
         app:layout_constraintStart_toStartOf="@+id/appCompatTextView5"
         app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5"
         app:layout_constraintEnd_toEndOf="@+id/appCompatTextView5">
+
+        <ImageView
+            android:id="@+id/imageViewLocatario1"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/appCompatTextView5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="15dp"
+            android:src="@drawable/ic_launcher_background"/>
+
+        <ImageView
+            android:id="@+id/imageViewLocatario2"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/appCompatTextView5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:src="@drawable/ic_launcher_background"/>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout1"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout1">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnPermissao"
@@ -72,16 +117,5 @@
             style="@style/btnSecundary" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/appCompatTextView5"
-        style="@style/subTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="A pessoa com a pulseira está\nem uma das fotos?"
-        app:layout_constraintStart_toStartOf="@+id/appCompatTextView3"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
-        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView3"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
