--- a/app/src/main/res/layout/activity_confirmar_um_cliente.xml
+++ b/app/src/main/res/layout/activity_confirmar_um_cliente.xml
@@ -47,14 +47,36 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/appCompatTextView5"
+        style="@style/subTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:text="A pessoa com a pulseira é\n a mesma da foto?"
+        app:layout_constraintStart_toStartOf="@+id/appCompatTextView3"
+        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
+        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView3"/>
+
+    <ImageView
+        android:id="@+id/imageViewLocatario"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/appCompatTextView5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_launcher_background"/>
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        app:layout_constraintStart_toStartOf="@+id/appCompatTextView5"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5"
-        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView5">
+        android:layout_marginTop="25dp"
+        app:layout_constraintStart_toStartOf="@+id/imageViewLocatario"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewLocatario"
+        app:layout_constraintEnd_toEndOf="@+id/imageViewLocatario">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnPermissao"
@@ -72,16 +94,5 @@
             style="@style/btnSecundary" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/appCompatTextView5"
-        style="@style/subTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="A pessoa com a pulseira é\n a mesma da foto?"
-        app:layout_constraintStart_toStartOf="@+id/appCompatTextView3"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
-        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView3"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
