--- a/app/src/main/res/layout/activity_lista_cartao.xml
+++ b/app/src/main/res/layout/activity_lista_cartao.xml
@@ -1,10 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    tools:viewBindingIgnore="false"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListaCartaoActivity">
+    tools:context=".CadastroActivity"
+    android:orientation="vertical"
+    android:gravity="center">
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/cartaotitle"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="80dp">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cartões cadastrados"
+            style="@style/mainTitle" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Aqui estão todos os cartões que você cadastrou. O limite é de até 3 cartões."
+            style="@style/subTitle" />
+
+        <LinearLayout
+            android:id="@+id/infoCartao"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintStart_toStartOf="@+id/cartaotitle"
+            app:layout_constraintTop_toBottomOf="@+id/cartaotitle"
+            app:layout_constraintEnd_toEndOf="@+id/cartaotitle"
+            android:layout_marginBottom="40dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cartão 1"/>
+
+            <TextView
+                android:id="@+id/tvCartao"
+                style="@style/subTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/infoCartao2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintStart_toStartOf="@+id/infoCartao"
+            app:layout_constraintTop_toBottomOf="@+id/infoCartao"
+            app:layout_constraintEnd_toEndOf="@+id/infoCartao"
+            android:layout_marginBottom="40dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cartão 2"/>
+
+            <TextView
+                android:id="@+id/tvCartao2"
+                style="@style/subTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/infoCartao3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintStart_toStartOf="@+id/infoCartao"
+            app:layout_constraintTop_toBottomOf="@+id/infoCartao"
+            app:layout_constraintEnd_toEndOf="@+id/infoCartao"
+            android:layout_marginBottom="40dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cartão 3"/>
+
+            <TextView
+                android:id="@+id/tvCartao3"
+                style="@style/subTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_AddCartao"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Adicionar um cartão"
+            style="@style/btnPrimary"
+            app:layout_constraintStart_toStartOf="@+id/infoCartao2"
+            app:layout_constraintTop_toBottomOf="@+id/infoCartao2"
+            app:layout_constraintEnd_toEndOf="@+id/infoCartao2"/>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
