Configuração da activity de lista de cartões

--- a/app/src/main/res/layout/activity_lista_cartao.xml
+++ b/app/src/main/res/layout/activity_lista_cartao.xml
@@ -32,77 +32,17 @@
             android:text="Aqui estão todos os cartões que você cadastrou. O limite é de até 3 cartões."
             style="@style/subTitle" />
 
-        <LinearLayout
-            android:id="@+id/infoCartao"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintStart_toStartOf="@+id/cartaotitle"
-            app:layout_constraintTop_toBottomOf="@+id/cartaotitle"
-            app:layout_constraintEnd_toEndOf="@+id/cartaotitle"
-            android:layout_marginBottom="40dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Cartão 1"/>
-
-            <TextView
-                android:id="@+id/tvCartao"
-                style="@style/subTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/infoCartao2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintStart_toStartOf="@+id/infoCartao"
-            app:layout_constraintTop_toBottomOf="@+id/infoCartao"
-            app:layout_constraintEnd_toEndOf="@+id/infoCartao"
-            android:layout_marginBottom="40dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Cartão 2"/>
-
-            <TextView
-                android:id="@+id/tvCartao2"
-                style="@style/subTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/infoCartao3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintStart_toStartOf="@+id/infoCartao"
-            app:layout_constraintTop_toBottomOf="@+id/infoCartao"
-            app:layout_constraintEnd_toEndOf="@+id/infoCartao"
-            android:layout_marginBottom="40dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Cartão 3"/>
-
-            <TextView
-                android:id="@+id/tvCartao3"
-                style="@style/subTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-        </LinearLayout>
+            app:layout_constraintTop_toBottomOf="@+id/infoCartao3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="20dp"/>
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_AddCartao"
+            android:id="@+id/btnAddCartao"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Adicionar um cartão"
@@ -110,7 +50,7 @@
             android:layout_marginBottom="10dp"/>
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_Voltar"
+            android:id="@+id/btnVoltar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Voltar"
